[mobile] fixed horizontal scrollbar issue.

--- a/src/components/footer/components/footer.module.scss
+++ b/src/components/footer/components/footer.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   height: 80px;
   padding: 0 5%;
   margin-top: 30px;
